--- a/index.html
+++ b/index.html
@@ -1,406 +1,237 @@
-<!DOCTYPE html>  
-<html lang="es">  
-<head>  
-<meta charset="UTF-8" />  
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
-<title>CELEX - Juegos</title>  
-<!-- Fuentes modernas -->  
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@400;600&display=swap" rel="stylesheet">  
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CELEX - Juegos</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #1e1e1e;
+      color: white;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #00ffff;
+    }
+    #authContainer {
+      max-width: 300px;
+      margin: 40px auto;
+      background: #2e2e2e;
+      padding: 20px;
+      border-radius: 8px;
+    }
+    input, button {
+      width: 100%;
+      padding: 10px;
+      margin: 5px 0;
+      border: none;
+      border-radius: 4px;
+    }
+    input {
+      background-color: #444;
+      color: white;
+    }
+    button {
+      background-color: #00cccc;
+      color: white;
+      cursor: pointer;
+    }
+    #userIcon {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      background-color: #00cccc;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      color: #fff;
+      cursor: pointer;
+      z-index: 1000;
+    }
+    #userInfo {
+      position: fixed;
+      top: 60px;
+      right: 10px;
+      background-color: #2e2e2e;
+      padding: 10px;
+      border-radius: 8px;
+      display: none;
+      z-index: 1000;
+    }
+    #searchContainer {
+      text-align: center;
+      margin: 20px 0;
+    }
+    #searchContainer input {
+      width: 50%;
+    }
+    #gameGrid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+    }
+    .game-card {
+      background-color: #2e2e2e;
+      border-radius: 8px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .game-card:hover {
+      transform: scale(1.05);
+    }
+    .game-card img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+    }
+    .game-card p {
+      margin: 10px;
+      font-weight: bold;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
 
-<style>  
-  /* Reset y base */  
-  * {  
-    box-sizing: border-box;  
-    margin: 0;  
-    padding: 0;  
-  }  
-  body {  
-    font-family: 'Montserrat', 'Raleway', sans-serif;  
-    background: linear-gradient(135deg, #000, #1a1a1a);  
-    color: #fff;  
-    position: relative;  
-    min-height: 100vh;  
-    overflow-x: hidden;  
-  }  
+<h1>CELEX - Juegos</h1>
 
-  /* Fondo con efecto blurred y animado */  
-  body::before {  
-    content: "";  
-    position: fixed;  
-    inset: 0;  
-    background-image: url("super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg");  
-    background-size: cover;  
-    filter: brightness(0.3) blur(3px);  
-    z-index: -1;  
-  }  
+<!-- Login -->
+<div id="authContainer">
+  <h2 style="text-align:center; margin-bottom:10px;">Iniciar Sesión</h2>
+  <input type="text" id="userInput" placeholder="Usuario" />
+  <input type="password" id="keyInput" placeholder="Clave" />
+  <button id="loginBtn">Entrar</button>
+  <div id="loginMessage" style="margin-top:10px; text-align:center; color:#ff5555;"></div>
+</div>
 
-  /* Encabezado */  
-h1 {  
-  text-align: center;  
-  padding: 30px 20px 10px 20px;  
-  font-size: 3em;  
-  font-family: 'Raleway', sans-serif;  
-  text-shadow: 0 0 15px #00fff2, 0 0 30px #00fff2;  
-  color: #fff;  
-  position: relative;  
-}  
+<!-- Icono de usuario -->
+<div id="userIcon" title="Usuario" style="display:none;"></div>
 
-/* Panel de login y bienvenida */  
-#authContainer {  
-  max-width: 400px;  
-  margin: auto;  
-  padding: 15px;  
-  background: rgba(255,255,255,0.05);  
-  border-radius: 15px;  
-  box-shadow: 0 0 20px #00fff2aa;  
-  margin-bottom: 30px;  
-  transition: all 0.3s ease;  
-}  
+<!-- Info usuario -->
+<div id="userInfo"></div>
 
-/* Input y botones */  
-input[type="text"], input[type="password"] {  
-  width: 100%;  
-  padding: 12px 15px;  
-  margin: 10px 0;  
-  border: none;  
-  border-radius: 8px;  
-  font-family: 'Montserrat', sans-serif;  
-  font-size: 1em;  
-}  
+<!-- Panel oculto hasta login -->
+<div id="mainPanel" style="display:none;">
+  <!-- Buscador -->
+  <div id="searchContainer">
+    <input type="text" id="searchInput" placeholder="Buscar juego..." />
+  </div>
 
-button {  
-  width: 100%;  
-  padding: 12px;  
-  background: #00fff2;  
-  color: #000;  
-  border: none;  
-  border-radius: 8px;  
-  font-weight: 600;  
-  font-family: 'Montserrat', sans-serif;  
-  font-size: 1.1em;  
-  cursor: pointer;  
-  margin-top: 15px;  
-  transition: background 0.3s ease;  
-}  
-button:hover {  
-  background: #00cccc;  
-}  
+  <!-- Juegos -->
+  <div id="gameGrid">
+    <div class="game-card" onclick="window.open('juegos/juego1/index.html','_blank')">
+      <img src="juegos/juego1/portada.jpg" alt="Juego 1" />
+      <p>Juego 1</p>
+    </div>
+    <div class="game-card" onclick="window.open('juegos/juego2/index.html','_blank')">
+      <img src="juegos/juego2/portada.jpg" alt="Juego 2" />
+      <p>Juego 2</p>
+    </div>
+    <div class="game-card" onclick="window.open('juegos/juego3/index.html','_blank')">
+      <img src="juegos/juego3/portada.jpg" alt="Juego 3" />
+      <p>Juego 3</p>
+    </div>
+    <!-- Agrega más juegos aquí -->
+  </div>
+</div>
 
-/* Icono de usuario en esquina superior derecha */  
-#userIcon {  
-  position: fixed;  
-  top: 20px;  
-  right: 20px;  
-  width: 60px;  
-  height: 60px;  
-  background: #00fff2;  
-  border-radius: 50%;  
-  display: flex;  
-  align-items: center;  
-  justify-content: center;  
-  cursor: pointer;  
-  box-shadow: 0 0 20px #00fff2aa;  
-  font-size: 1.5em;  
-  font-weight: bold;  
-  color: #000;  
-  user-select: none;  
-  transition: all 0.3s ease;  
-}  
-#userIcon:hover {  
-  box-shadow: 0 0 30px #00fff2;  
-}  
-
-/* Contenido de info de usuario, al clicquear icono */  
-#userInfo {  
-  position: fixed;  
-  top: 90px;  
-  right: 20px;  
-  background: rgba(0, 0, 0, 0.8);  
-  padding: 15px;  
-  border-radius: 12px;  
-  display: none;  
-  min-width: 200px;  
-  box-shadow: 0 0 20px #00fff2aa;  
-  font-family: 'Montserrat', sans-serif;  
-  font-size: 0.9em;  
-  color: #fff;  
-  z-index: 999;  
-}  
-
-/* Estilo para la sección de juegos (visible solo si usuario autenticado) */  
-#gameGrid {  
-  display: none; /* Oculto por default, se muestra después del login */  
-  max-width: 1200px;  
-  margin: 20px auto;  
-  padding: 20px;  
-  display: grid;  
-  grid-template-columns: repeat(auto-fit, minmax(150px,1fr));  
-  gap: 25px;  
-}  
-
-/* Anime para los juegos */  
-.game {  
-  background: rgba(255,255,255,0.05);  
-  border-radius: 15px;  
-  overflow: hidden;  
-  height: 180px;  
-  display: flex;  
-  flex-direction: column;  
-  align-items: center;  
-  justify-content: center;  
-  cursor: pointer;  
-  transition: transform 0.2s, box-shadow 0.2s;  
-}  
-.game:hover {  
-  transform: scale(1.05);  
-  box-shadow: 0 0 25px #00fff2aa;  
-}  
-.game img {  
-  width: 80%;  
-  height: 120px;  
-  object-fit: cover;  
-  border-bottom: 2px solid #00fff2;  
-}  
-.game-title {  
-  margin-top: 8px;  
-  font-size: 1em;  
-  color: white;  
-  text-shadow: 0 0 5px #00fff2;  
-}  
-
-/* Search bar opcional si deseas */  
-#searchContainer {  
-  max-width: 600px;  
-  margin: 20px auto;  
-  display: flex;  
-  justify-content: center;  
-}  
-#searchContainer input {  
-  width: 100%;  
-  max-width: 300px;  
-  padding: 10px 15px;  
-  border-radius: 8px;  
-  border: none;  
-  font-family: 'Montserrat', sans-serif;  
-  font-size: 1em;  
-}  
-
-/* Animación suave */  
-.transition {  
-  transition: all 0.3s ease;  
-}  
-</style>  
-</head>  
-<body>  
-
-<h1>CELEX - Juegos</h1>  
-
-<!-- Panel de login -->  
-<div id="authContainer">  
-  <h2 style="text-align:center; margin-bottom:10px;">Iniciar Sesión</h2>  
-  <input type="text" id="userInput" placeholder="Usuario" />  
-  <input type="password" id="keyInput" placeholder="Clave" />  
-  <button id="loginBtn">Entrar</button>  
-  <div id="loginMessage" style="margin-top:10px; text-align:center; color:#ff5555;"></div>  
-</div>  
-
-<!-- Icono de usuario -->  
-<div id="userIcon" title="Usuario"></div>  
-
-<!-- Información del usuario -->  
-<div id="userInfo"></div>  
-
-<!-- Sección de juegos (oculta hasta login correcto) -->  
-<div id="gameGrid">  
-  <!-- Aquí se añaden los juegos -->  
-  <div class="game" onclick="alert('Navegar a Slope')">  
-    <a href="Slope-Source-code-main/index.html" target="_blank">  
-      <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope" />  
-      <div class="game-title">Slope</div>  
-    </a>  
-  </div>  
-  <div class="game" onclick="alert('Navegar a Backrooms')">  
-    <a href="backrooms/index.html" target="_blank">  
-      <img src="backrooms/img/icon.png" alt="Backrooms" />  
-      <div class="game-title">Backrooms</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="BurritoBison-main/index.html">  
-      <img src="BurritoBison-main/images/burrito-png.png" alt="Burrito Bison" />  
-      <div class="game-title">Burrito Bison</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="csgo/index.html">  
-      <img src="csgo/download.jpg" alt="CS:GO" />  
-      <div class="game-title">CS:GO</div>  
-    </a> 
-   </div>  
-  <div class="game">  
-    <a href="BobTheRobber/bob-the-robber.html">  
-      <img src="BobTheRobber/download.jpg" alt="Bob The Robber" />  
-      <div class="game-title">Bob The Robber</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="drive-mad-main/index.html">  
-      <img src="drive-mad-main/webapp/cover.jpg" alt="Drive Mad" />  
-      <div class="game-title">Drive Mad</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="WorldHardest/index.html">  
-      <img src="WorldHardest/world.png" alt="World Hardest Game" />  
-      <div class="game-title">World Hardest Game</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="bitlife/index.html">  
-      <img src="bitlife/logo.png" alt="Bitlife" />  
-      <div class="game-title">Bitlife</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="driftboss/index.html">  
-      <img src="driftboss/branding/logo1.png" alt="Drift Boss" />  
-      <div class="game-title">Drift Boss</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="happywheels/index.html">  
-      <img src="happywheels/166950-HUdYLFwSkLSLQIwO.png" alt="Happy Wheels" />  
-      <div class="game-title">Happy Wheels</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="pacman/index.html">  
-      <img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="Pacman" />  
-      <div class="game-title">Pacman</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="skibidi1v100/index.html">  
-      <img src="skibidi1v100/logo.png" alt="Skibidi 1v100" />  
-      <div class="game-title">Skibidi 1v100</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="DogeMiner/index.html">  
-      <img src="DogeMiner/favicon.ico" alt="Doge Miner Tycoon" />  
-      <div class="game-title">Doge Miner Tycoon</div>  
-    </a>  
-   </div>  
-  <div class="game">  
-    <a href="Vex/vex.html">  
-      <img src="Vex7/assets/icon.png" alt="Vex 7" />  
-      <div class="game-title">Vex 7</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="snowrider3d/index.html">  
-      <img src="snowrider3d/snow.png" alt="Snow Rider 3D" />  
-      <div class="game-title">Snow Rider 3D</div>  
-    </a>  
-  </div>  
-  <div class="game">  
-    <a href="volleyrandom/index.html">  
-      <img src="volleyrandom/splash.png" alt="Volley Random" />  
-      <div class="game-title">Volley Random</div>  
-    </a>  
-  </div>  
-</div>  
-
-<!-- JavaScript -->  
-<script>  
-  // Datos de usuarios y claves  
-// Define aquí tus usuarios y contraseñas (agrega más si quieres)  
-const usuarios = {  
-  "admin": {  
-    clave: "dueño",  
-    plan: "premium",  
-    caducidad: "2025-12-31"  
-  },  
-  "user1": {  
-    clave: "abc123",  
-    plan: "gratis",  
-    caducidad: "2025-06-15"  
-  }  
-};  
-
-// Variable para el usuario actual  
-let usuarioActual = null;  
-
-// Elementos del DOM  
-const loginBtn = document.getElementById("loginBtn");  
-const userInput = document.getElementById("userInput");  
-const keyInput = document.getElementById("keyInput");  
-const loginMessage = document.getElementById("loginMessage");  
-const authContainer = document.getElementById("authContainer");  
-const gameGrid = document.getElementById("gameGrid");  
-const userIcon = document.getElementById("userIcon");  
-const userInfo = document.getElementById("userInfo");  
-
-// Ocultar juegos al cargar  
-window.onload = () => {  
-  document.getElementById("gameGrid").style.display = "none";  
-};  
-
-// Función de inicio de sesión  
-document.getElementById("loginBtn").onclick = () => {  
-  const user = userInput.value.trim();  
-  const key = keyInput.value.trim();  
-
-  // Consola de depuración  
-  console.log("Usuario ingresado:", user);  
-  console.log("Clave ingresada:", key);  
-
-  if (usuarios[user]) {  
-    console.log("Clave almacenada para", user, ":", usuarios[user].clave);  
-    if (usuarios[user].clave === key) {  
-      // Inicio de sesión correcto  
-      usuarioActual = { ...usuarios[user], nombre: user };  
-      mostrarJuegos(); // Muestra los juegos  
-      mostrarIcono();   // Muestra el icono  
-      authContainer.style.display = "none"; // Oculta formulario  
-      loginMessage.innerText = ""; // Limpia mensaje  
-    } else {  
-      // Clave incorrecta  
-      loginMessage.innerText = "Usuario o clave incorrecta.";  
-      document.getElementById("gameGrid").style.display = "none";  
-    }  
- 
-  // Mensaje final en consola  
-  console.log("Resultado login:", loginMessage.innerText);  
-};  
-
-// Funciones auxiliares (agrega estas si no las tienes aún)  
-function mostrarJuegos() {  
-  document.getElementById("gameGrid").style.display = "grid";  
-}  
-function mostrarIcono() {  
-  userIcon.innerHTML = "U"; // Puedes poner icono o imagen aquí  
-}  
-// Evento click en icono de usuario para mostrar info  
-document.getElementById("userIcon").onclick = () => {  
-  if (!usuarioActual) return;  
-  const { plan, caducidad, nombre } = usuarioActual;  
-  const today = new Date().toISOString().slice(0, 10);  
-  userInfo.innerHTML = `  
-    <strong>Usuario:</strong> ${nombre}<br>  
-    <strong>Plan:</strong> ${plan}<br>  
-    <strong>Cierre plan:</strong> ${caducidad}<br>  
-    <em>Hoy: ${today}</em>  
-  `;  
-  userInfo.style.display = userInfo.style.display === "block" ? "none" : "block";  
-};  
-
-// Cerrar info si clickea fuera  
-document.addEventListener("click", (e) => {  
-  if (!userInfo.contains(e.target) && e.target !== document.getElementById("userIcon")) {  
-    userInfo.style.display = "none";  
-  }  
-   // Debug: mensaje final en consola  
-  console.log("Resultado login:", loginMessage.innerText);  
+<script>
+// Usuarios y claves
+const usuarios = {
+  "admin": {
+    clave: "dueño",
+    plan: "premium",
+    caducidad: "2025-12-31"
+  },
+  "user1": {
+    clave: "abc123",
+    plan: "gratis",
+    caducidad: "2025-06-15"
+  }
 };
+
+let usuarioActual = null;
+
+const loginBtn = document.getElementById("loginBtn");
+const userInput = document.getElementById("userInput");
+const keyInput = document.getElementById("keyInput");
+const loginMessage = document.getElementById("loginMessage");
+const authContainer = document.getElementById("authContainer");
+const mainPanel = document.getElementById("mainPanel");
+const userIcon = document.getElementById("userIcon");
+const userInfo = document.getElementById("userInfo");
+const searchInput = document.getElementById("searchInput");
+const gameCards = document.querySelectorAll(".game-card");
+
+// Ocultar todo al cargar
+window.onload = () => {
+  mainPanel.style.display = "none";
+  userIcon.style.display = "none";
+  userInfo.style.display = "none";
+};
+
+// Login
+loginBtn.onclick = () => {
+  const user = userInput.value.trim();
+  const key = keyInput.value.trim();
+  if (usuarios[user] && usuarios[user].clave === key) {
+    usuarioActual = { ...usuarios[user], nombre: user };
+    mostrarContenido();
+  } else {
+    loginMessage.innerText = "Usuario o clave incorrecta.";
+    ocultarContenido();
+  }
+};
+
+function mostrarContenido() {
+  authContainer.style.display = "none";
+  mainPanel.style.display = "block";
+  userIcon.style.display = "flex";
+  loginMessage.innerText = "";
+  userIcon.innerHTML = usuarioActual.nombre.charAt(0).toUpperCase();
+}
+
+function ocultarContenido() {
+  mainPanel.style.display = "none";
+  userIcon.style.display = "none";
+}
+
+// Mostrar info del usuario
+userIcon.onclick = () => {
+  if (!usuarioActual) return;
+  const { plan, caducidad, nombre } = usuarioActual;
+  const today = new Date().toISOString().slice(0, 10);
+  userInfo.innerHTML = `
+    <strong>Usuario:</strong> ${nombre}<br>
+    <strong>Plan:</strong> ${plan}<br>
+    <strong>Cierre plan:</strong> ${caducidad}<br>
+    <em>Hoy: ${today}</em>
+  `;
+  userInfo.style.display = userInfo.style.display === "block" ? "none" : "block";
+};
+
+document.addEventListener("click", (e) => {
+  if (!userInfo.contains(e.target) && e.target !== userIcon) {
+    userInfo.style.display = "none";
+  }
 });
+
+// Buscador
+searchInput.addEventListener("input", function () {
+  const query = this.value.toLowerCase();
+  document.querySelectorAll(".game-card").forEach(card => {
+    const title = card.querySelector("p").textContent.toLowerCase();
+    card.style.display = title.includes(query) ? "block" : "none";
+  });
+});
+</script>
+</body>
+</html>
